--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,12 +20,13 @@
   <tr>
     <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-    <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+    <td><a th:href="@{/list/jobs(column='all')}" th:text="${columns.all}"></a></td> <!-- Feel free to remove or modify this element if necessary. -->
 
     <td th:each="category : ${tableChoices}">
       <ul>
         <li th:each="item : ${category.value}">
-          <a th:href="@{/list/jobs(column=${category.key},value=${item})}" th:text="${item}"></a>
+          <a th:href="@{/list/jobs(column=${category.key},value=${item})}"
+             th:text="${category.key == 'all' ? 'View All' : item}">View All</a>
         </li>
       </ul>
     </td>
