--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,6 +26,34 @@
         </div>
     </div>
 </div>
+<th:block th:fragment="job-results-table" th:each="job : ${jobs}">
+    <table class="job-listing">
+        <tr>
+            <th>ID:</th>
+            <td th:text="${job.id}"></td>
+        </tr>
+        <tr>
+            <th>Name:</th>
+            <td th:text="${job.name}"></td>
+        </tr>
+        <tr>
+            <th>Employer:</th>
+            <td th:text="${job.employer.value}"></td>
+        </tr>
+        <tr>
+            <th>Location:</th>
+            <td th:text="${job.location.value}"></td>
+        </tr>
+        <tr>
+            <th>Position Type:</th>
+            <td th:text="${job.positionType.value}"></td>
+        </tr>
+        <tr>
+            <th>Skill:</th>
+            <td th:text="${job.coreCompetency.value}"></td>
+        </tr>
+    </table>
+</th:block>
 
 </body>
 </html>
