--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -13,35 +13,8 @@
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
 
-  <th:block th:fragment="job-results-table" th:each="job : ${jobs}">
-    <table class="job-listing">
-      <tr>
-        <th>ID:</th>
-        <td th:text="${job.id}"></td>
-      </tr>
-      <tr>
-        <th>Name:</th>
-        <td th:text="${job.name}"></td>
-      </tr>
-      <tr>
-        <th>Employer:</th>
-        <td th:text="${job.employer.value}"></td>
-      </tr>
-      <tr>
-        <th>Location:</th>
-        <td th:text="${job.location.value}"></td>
-      </tr>
-      <tr>
-        <th>Position Type:</th>
-        <td th:text="${job.positionType.value}"></td>
-      </tr>
-      <tr>
-        <th>Skill:</th>
-        <td th:text="${job.coreCompetency.value}"></td>
-      </tr>
-    </table>
-  </th:block>
-
+<div th:each="job : ${jobs}" th:replace="~{fragments :: job-results-table}"></div>
+</div>
 
 </body>
 </html>
