--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,9 +37,8 @@
   <hr />
 
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
-    <div th:each="job : ${jobs}" th:include="~{list-jobs :: job-results-table}"></div>
+    <div th:each="job : ${jobs}" th:replace="~{fragments :: job-results-table}"></div>
     </div>
-</div>
 
 </body>
 </html>
