--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -13,8 +13,35 @@
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
 
-<div th:each="job : ${jobs}" th:replace="~{fragments :: job-results-table}"></div>
-</div>
+  <th:block th:fragment="job-results-table" th:each="job : ${jobs}">
+    <table class="job-listing">
+      <tr>
+        <td>ID</td>
+        <td th:text="${job.id}"></td>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td th:text="${job.name}"></td>
+      </tr>
+      <tr>
+        <td>Employer</td>
+        <td th:text="${job.employer.value}"></td>
+      </tr>
+      <tr>
+        <td>Location</td>
+        <td th:text="${job.location.value}"></td>
+      </tr>
+      <tr>
+        <td>Position Type</td>
+        <td th:text="${job.positionType.value}"></td>
+      </tr>
+      <tr>
+        <td>Skill</td>
+        <td th:text="${job.coreCompetency.value}"></td>
+      </tr>
+    </table>
+  </th:block>
+
 
 </body>
 </html>
